# wiki-craft

./: .gitignore  README.md  justfile  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  documents.ts  search.ts  wiki.ts
frontend/src/components/common/: EmptyState.tsx  LoadingState.tsx  ThemeToggle.tsx
frontend/src/components/documents/: DocumentCard.tsx  DocumentDetail.tsx  DocumentList.tsx  UploadZone.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/search/: SearchBar.tsx  SearchFilters.tsx  SearchResults.tsx
frontend/src/components/wiki/: WikiContent.tsx  WikiGenerator.tsx
frontend/src/hooks/: useDocuments.ts  useSearch.ts  useStats.ts  useWiki.ts
frontend/src/pages/: Dashboard.tsx  DocumentsPage.tsx  SearchPage.tsx  WikiPage.tsx
frontend/src/types/: api.ts
src/wiki_craft/: __init__.py  config.py  main.py
src/wiki_craft/api/: __init__.py  app.py  dependencies.py
src/wiki_craft/api/routes/: __init__.py  documents.py  ingest.py  search.py  wiki.py
src/wiki_craft/embeddings/: __init__.py  local.py
src/wiki_craft/parsers/: __init__.py  base.py  epub.py  html.py  markdown.py  office.py  pdf.py
src/wiki_craft/processing/: __init__.py  chunker.py  cleaner.py  metadata.py
src/wiki_craft/storage/: __init__.py  models.py  vector_store.py
src/wiki_craft/wiki/: __init__.py  formatter.py  generator.py
tests/: __init__.py  conftest.py
tests/test_parsers/: test_markdown.py
tests/test_processing/: test_chunker.py
